--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,11 +1,11 @@
 font:
   normal:
-    family: Iosevka Term
+    family: Iosevka Term Slab
   size: 10
 
 window:
   padding:
-    x: 35
-    y: 35
+    x: 24
+    y: 24
 
 tabspace: 2
