--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/.vim/pack/bundle/start/nerdtree"]
 	path = vim/.vim/pack/bundle/start/nerdtree
 	url = https://github.com/preservim/nerdtree.git
+[submodule "vim/.vim/pack/bundle/start/vim-workman"]
+	path = vim/.vim/pack/bundle/start/vim-workman
+	url = https://github.com/tbroadley/vim-workman.git
